# ctask

./: .gitignore  CMakeLists.txt  main.cpp
inc/: Task.h  TaskManager.h
src/: CMakeLists.txt  Task.cpp  TaskManager.cpp
